# FlappyBird-Pygame

./: README.md  main.py  pyproject.toml  testing.py
