[tool.poetry]
name = "flappybird-pygame"
version = "0.1.0"
description = "FlappyBird with OpenCV"
authors = ["v1nte <ivinte99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
